--- a/amy/index.html
+++ b/amy/index.html
@@ -6,13 +6,13 @@
   <meta name="author" content="Mark Isherwood">
   <title>Amy's Birthday Present 2018</title>
   <!-- Bootstrap core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="/amy/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom styles for this template -->
-  <link href="index.css" rel="stylesheet">
+  <link href="/amy/css/index.css" rel="stylesheet">
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Happy Birthday</a>
+    <a class="navbar-brand" href="#">Happy Birthday Amy!</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -32,11 +32,15 @@
 
   <main role="main" class="container">
 
-    <div class="starter-template">
+    <div class="intro-text">
       <h1>Happy Birthday Amy!</h1>
-      <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a
-        mostly barebones HTML document.</p>
+      <p class="lead">I hope your birthday has been great so far. I decided to make a bit of a puzzle to go with your present.</p>
     </div>
+    <video id="js-camera-preview">
+      
+    </video>
+
+
 
   </main>
 
@@ -48,8 +52,9 @@
   <script>
     window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')
   </script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/secrets.min.js"></script>
-  <script src="js/index.js"></script>
+  <script src="/amy/js/bootstrap.min.js"></script>
+  <script src="/amy/js/secrets.js"></script>
+  <script src="/amy/js/instascan.min.js"></script>
+  <script src="/amy/js/index.js"></script>
 </body>
 </html>
