--- a/amy/index.html
+++ b/amy/index.html
@@ -1,60 +1,73 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="Mark Isherwood">
-  <title>Amy's Birthday Present 2018</title>
-  <!-- Bootstrap core CSS -->
-  <link href="/amy/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom styles for this template -->
-  <link href="/amy/css/index.css" rel="stylesheet">
-</head>
-<body>
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Happy Birthday Amy!</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-      aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="Mark Isherwood">
+    <title>Amy's Birthday Present 2018</title>
+    <!-- Bootstrap core CSS -->
+    <link href="/amy/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="/amy/css/index.css" rel="stylesheet">
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#">Happy Birthday Amy!</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNavbar" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">View Progress <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Scan code</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+      <div class="collapse navbar-collapse" id="mainNavbar">
+        <ul class="nav navbar-nav mr-auto" role="tablist">
+          <li class="nav-item">
+            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home
+              <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="progress-tab" data-toggle="tab" href="#progress" aria-controls="profile" aria-selected="false">View Progress</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="scan-tab" data-toggle="tab" href="#scan" aria-controls="profile" aria-selected="false">Scan code</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" id="unlock-tab" data-toggle="tab" href="#unlock" aria-disabled="true" aria-controls="profile" aria-selected="false">Unlock present</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-  <main role="main" class="container">
+    <main role="main" class="container">
+      <div class="tab-content">
+        <div id="home" role="tabpanel" aria-labelledby="home-tab" class="tab-pane active show intro-text">
+          <h1>Happy Birthday Amy!</h1>
+          <p class="lead">I hope your birthday has been great so far. I decided to make a bit of a puzzle to go with your present.</p>
+          <p>Use the menu to start unlocking your present.</p>
+        </div>
+        <div id="progress" role="tabpanel" aria-labelledby="progress-tab" class="tab-pane">
+          <p class="lead">You've found <span class="js-current-scans"></span> out of <span class="js-scans-required-scans"></span> codes</p>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+        <div id="scan" class="tab-pane scan-tab" role="tabpanel" aria-labelledby="video-tab">
+          <p>Scan a code with your camera to start unlocking your present</p>
+          <video class="camera-preview" id="js-camera-preview"></video>
+        </div>
+        <div id="unlock" class="tab-pane unlock-tab" role="tabpanel" aria-labelledby="unlock-tab">
+          <p>You must collect all the codes to unlock your present.</p>
+        </div>
+      </div>
+    </main>
 
-    <div class="intro-text">
-      <h1>Happy Birthday Amy!</h1>
-      <p class="lead">I hope your birthday has been great so far. I decided to make a bit of a puzzle to go with your present.</p>
-    </div>
-    <video id="js-camera-preview">
-      
-    </video>
-
-
-
-  </main>
-
-  <!-- Bootstrap core JavaScript
-    ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script>
-    window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')
-  </script>
-  <script src="/amy/js/bootstrap.min.js"></script>
-  <script src="/amy/js/secrets.js"></script>
-  <script src="/amy/js/instascan.min.js"></script>
-  <script src="/amy/js/index.js"></script>
-</body>
+    <!-- Bootstrap core JavaScript ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script>
+      window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')
+    </script>
+    <script src="/amy/js/bootstrap.min.js"></script>
+    <script src="/amy/js/secrets.js"></script>
+    <script src="/amy/js/instascan.min.js"></script>
+    <script src="/amy/js/index.js"></script>
+  </body>
 </html>
