Setup auto-closing of nav bar

--- a/amy/index.html
+++ b/amy/index.html
@@ -41,7 +41,7 @@
         <div id="home" role="tabpanel" aria-labelledby="home-tab" class="tab-pane active show intro-text">
           <h1>Happy Birthday Amy!</h1>
           <p class="lead">I hope your birthday has been great so far. I decided to make a bit of a puzzle to go with your present.</p>
-          <p>Use the menu to start unlocking your present.</p>
+          <p class="lead">Use the menu to start unlocking your present.</p>
         </div>
         <div id="progress" role="tabpanel" aria-labelledby="progress-tab" class="tab-pane">
           <p class="lead">You've found <span class="js-current-scans"></span> out of <span class="js-scans-required-scans"></span> codes</p>
@@ -50,11 +50,11 @@
           </div>
         </div>
         <div id="scan" class="tab-pane scan-tab" role="tabpanel" aria-labelledby="video-tab">
-          <p>Scan a code with your camera to start unlocking your present</p>
+          <p class="lead">Scan a code with your camera to start unlocking your present</p>
           <video class="camera-preview" id="js-camera-preview"></video>
         </div>
         <div id="unlock" class="tab-pane unlock-tab" role="tabpanel" aria-labelledby="unlock-tab">
-          <p>You must collect all the codes to unlock your present.</p>
+          <p class="lead">You must collect all the codes to unlock your present.</p>
         </div>
       </div>
     </main>
