Added validation and alert messages.

--- a/amy/index.html
+++ b/amy/index.html
@@ -37,6 +37,8 @@
     </nav>
 
     <main role="main" class="container">
+      <div class="alert-container">
+      </div>
       <div class="tab-content">
         <div id="home" role="tabpanel" aria-labelledby="home-tab" class="tab-pane active show intro-text">
           <canvas id="fireworks-canvas">Canvas is not supported in your browser.</canvas>
