Setup unlocking functionality.

--- a/amy/index.html
+++ b/amy/index.html
@@ -61,8 +61,8 @@
           <p class="lead">Scan a code with your camera to start unlocking your present</p>
           <video class="camera-preview" id="js-camera-preview"></video>
         </div>
-        <div id="unlock" class="tab-pane unlock-tab" role="tabpanel" aria-labelledby="unlock-tab">
-          <p class="lead">You must collect all the codes to unlock your present.</p>
+        <div id="unlock" class="tab-pane unlock-tab intro-text" role="tabpanel" aria-labelledby="unlock-tab">
+          <p class="lead">The code to unlock your present is <span class="js-answer"></span>.</p>
         </div>
       </div>
     </main>
